--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "lucide-react": "^0.290.0",
     "next": "14.0.0",
     "react": "^18",
